--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: 自动打卡
 
 on:
-#   schedule:
-#     - cron: '0 0 * * *' # 每天在国际标准时间0点（北京时间8点）运行
-  workflow_dispatch: # 手动运行工作流程
+
+  workflow_dispatch: # 手动运行工作流程  
+  schedule:
+     - cron: '51 9 * * *' 
+ # 每天在国际标准时间0点（北京时间8点）运行
 
 jobs:
   build:
